Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-8365

qmlscene launched from Qt Creator crashes (import libs)

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P1: Critical P1: Critical
    • None
    • Qt Creator 2.6.1
    • Quick / QML Support
    • None
    • f0d5ad714e7487b16e6c068d15f108a5d983afaf

      Launching qmlscene from within Qt Creator for following file crashes:

      import QtWebKit 3.0
      import QtQUick 2.0
      Item {
        width :640
        height: 480
        WebView {
           source: "http://digia.com"
        }
      }
      

      The same launches without crash on the command line. Difference is the '-I' argument we pass on launch time:

      Starting /home/kkoehne/Qt5.0.0-rc1/5.0.0-rc1/gcc_64/bin/qmlscene -I /home/kkoehne/Qt5.0.0-rc1/5.0.0-rc1/gcc_64/imports /home/kkoehne/tmp/qtquick2_t/qtquick2_t.qml
      

        For Gerrit Dashboard: QTCREATORBUG-8365
        # Subject Branch Project Status CR V

            rafal Rafal Motyka
            kkohne Kai Köhne
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes