QmlProject: Don't add Qt import on command line

Actually this can lead to crashes if passing the QtQuick1 import
path to qmlscene.

The removed code was introduced in 404186a919b5655054. However,
the Qt import path for the code model is also added in
QmlProject::refresh().

Task-number: QTCREATORBUG-8365
Change-Id: I8581ce3d67c83c0f27d7b8aefedf9765935bedbc
Reviewed-by: Fawzi Mohamed <fawzi.mohamed@digia.com>