src/plugins/qmlprojectmanager/qmlproject.h
@@ -87,7 +87,7 @@ public:
     QDir projectDir() const;
     QStringList files() const;
     QString mainFile() const;
-    QStringList importPaths() const;
+    QStringList customImportPaths() const;
 
     bool addFiles(const QStringList &filePaths);
 
